# shreef-asf-fr

./: .replit  autoresponders.json  config.json  deploy.yml  discordemoji.py  emoji_utils.py  friend_list.json  main.py  noprefix.json  nvm.txt  owner.json  prefix.py  premium_users.json  pyproject.toml  quotes.py  replit.nix
Sunday/__MACOSX/: ._Sunday
