[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
bs4 = "^0.0.1"
discord = "^2.3.2"
flask = "^3.0.0"
requests = "^2.31.0"
gunicorn = "^21.2.0"
youtube-dl = "^2021.12.17"
aiohttp = "^3.9.1"
quote = "^2.0.4"
quotes = "^0.0.3"
discord-py = "^2.3.2"
discord-webhook = "^1.3.0"
pillow = "^10.2.0"
fastapi = "^0.108.0"
pydantic = "^2.5.3"
uvicorn = "^0.25.0"
unicorn = "^2.0.1.post1"
git-python = "^1.0.3"
dj-spam = "^0.2.0"
kaolibrary = "^1.0.2"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"